# ModularTransformer

./: .gitignore  CONTRIBUTING.md  README.md  __init__.py  attention_blocks.py  base.py  classical.py  justfile  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/: .gitignore  README.md
docs/source/: classic.rst  conf.py  index.rst  install.rst  structure.rst  taylor.rst  usage.rst
examples/: .gitignore  __init__.py  data.py  evaluate.py  model.py  model_weights.py  quadratic_linear_regression.py  results.ipynb  train.py  train_MC.py  train_all.py  train_mc.py  train_non_transformer.py  train_non_transformer_cubic.py  train_non_transformer_double.py  train_non_transformer_linear.py  train_quadratic_layer.py  util.py
examples/data/: gitignore
examples/monte_carlo/: model_analysis.py  train_mc.py
examples/taylor/: evaluate.py  quadratic_linear_regression.py  train_non_transformer_linear.py  train_quadratic_layer.py
examples/taylor/results/: results-entsoe.parquet  results-etth2.parquet
layers/: __init__.py  base.py  classical.py  full_access.py
layers/attention_modules/: __init__.py  base.py  classical.py  full_access.py
layers/attention_modules/attention_mechanisms/: __init__.py  base.py  dot_product.py
layers/attention_modules/attention_mechanisms/masking/: __init__.py  base.py
layers/attention_modules/head_reductions/: base.py  concat.py
layers/attention_modules/output_modules/: __init__.py  base.py  linear.py  linear_MCD.py  none.py
layers/attention_modules/qkv_maps/: __init__.py  base.py  linear.py
modular_transformer/: __init__.py  base.py  classical.py  classical_mc.py  taylor.py
modular_transformer/layers/: __init__.py  base.py  classical.py  classical_mcd.py  taylor.py
modular_transformer/layers/attention_modules/: __init__.py  base.py  classical.py  classical_mcd.py  taylor.py
modular_transformer/layers/attention_modules/attention_mechanisms/: __init__.py  base.py  dot_product.py
modular_transformer/layers/attention_modules/attention_mechanisms/masking/: __init__.py  base.py  (+1 more)
modular_transformer/layers/attention_modules/head_reductions/: __init__.py  base.py  concat.py
modular_transformer/layers/attention_modules/output_modules/: __init__.py  base.py  linear.py  linear_MCD.py  linear_mcd.py  mc_dropout.py  none.py
modular_transformer/layers/attention_modules/qkv_maps/: __init__.py  base.py  linear.py  linear_mcd.py
