[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "modular-transformer"
version = "0.1.0"
requires-python = ">=3.10"
authors = [
    { name = "Arvid Weyrauch", email = "arvid.weyrauch@kit.edu" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "polars >=0.20.2,<0.21",
    "torch >=2.1.0,<3.0.0",
    "numpy >=1.26.2,<2.0.0",
]

[tool.hatch.build.targets.sdist]
include = [
    "/modular_transformer",
]
